--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,7 @@
 /* Application-wide Styles */
 h1 {
-  color: midnightblue;
+  color: whitesmoke;
+  text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
