--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
 h1 {
   color: whitesmoke;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Brush Script MT";
   font-size: 250%;
 }
 h2, h3 {
