--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,18 @@
 <h1>{{title}}</h1>
 <!-- 加载 presentation 模块 -->
-<app-presentation></app-presentation>
-
-
+<!--<app-presentation></app-presentation>-->
+<!--<app-quiz></app-quiz>-->
+<div class="container">
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/presentation">Presentation</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/quiz">quiz</a>
+    </li>
+  </ul>
+  <div>
+    <app-presentation></app-presentation>
+  </div>
+</div>
 
