--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,7 +1,18 @@
-<p>quiz works!</p>
-<div style="display: block">
-  <canvas baseChart
-          [datasets]="radarChartData"
-          [labels]="radarChartLabels"
-          [chartType]="radarChartType"></canvas>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Quick Quiz</title>
+</head>
+<body>
+<div class="container">
+  <div id="home" class="flex-center flex-column">
+    <h1>Quick Quiz</h1>
+    <a class="btn" href="/game.html">Play</a>
+    <a class="btn" href="/highscores.html">High Scores</a>
+  </div>
 </div>
+</body>
+</html>
