--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,12 +6,12 @@ h1 {
   font-size: 250%;
 }
 h2, h3 {
-  color: #444;
+  color: whitesmoke;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
 }
 body {
-  margin: 2em;
+  /*margin: 2em;*/
 }
 body, input[type="text"], button {
   color: #333;
