--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/quiz">quiz</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/game">game</a>
+    </li>
   </ul>
   <div>
     <router-outlet></router-outlet>
