--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,10 +13,10 @@ h2, h3 {
 body {
   /*margin: 2em;*/
 }
-body, input[type="text"], button {
-  color: #333;
-  font-family: Cambria, Georgia;
-}
+/*body, input[type="text"], button {*/
+/*  color: #333;*/
+/*  font-family: Cambria, Georgia;*/
+/*}*/
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
