--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -2,15 +2,23 @@
   display: flex;
   margin-bottom: 0.5rem;
   width: 100%;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   border: 0.1rem solid rgba(86, 165, 235, 0.25);
   background-color: white;
 }
 
-h2 {
+.h2 {
   color: whitesmoke;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
+  font-size: 200%;
+}
+
+.question {
+  color: whitesmoke;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+  font-size: 250%;
 }
 
 .choice-container:hover {
@@ -29,4 +37,28 @@ h2 {
 .choice-text {
   padding: 1.5rem;
 }
+/* HUD */
 
+#hud {
+  display: flex;
+  justify-content: space-between;
+}
+
+.hud-prefix {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.score {
+  text-align: center;
+  color: #56a5eb;
+  font-size: 400%;
+}
+
+.incorrect {
+  background: #dc3545;
+}
+
+.correct {
+  background: green;
+}
