--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/game">game</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/end">end</a>
+    </li>
   </ul>
   <div>
     <router-outlet></router-outlet>
