--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,7 @@ h1 {
   color: whitesmoke;
   text-align: center;
   font-family: "Brush Script MT";
-  font-size: 250%;
+  font-size: 400%;
 }
 h2, h3 {
   color: whitesmoke;
@@ -13,12 +13,49 @@ h2, h3 {
 body {
   /*margin: 2em;*/
 }
-/*body, input[type="text"], button {*/
-/*  color: #333;*/
-/*  font-family: Cambria, Georgia;*/
-/*}*/
-/* everywhere else */
+
+.quiz {
+  color: whitesmoke;
+  padding-left: initial;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+  font-size: 250%;
+}
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.btn {
+  font-size: 1.8rem;
+  padding: 1rem 0;
+  width: 20rem;
+  text-align: center;
+  border: 0.1rem solid #56a5eb;
+  margin-bottom: 1rem;
+  text-decoration: none;
+  color: #56a5eb;
+  background-color: white;
+}
+
+.btn:hover {
+  cursor: pointer;
+  box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+  transform: translateY(-0.1rem);
+  transition: transform 150ms;
+}
+
+.btn[disabled]:hover {
+  cursor: not-allowed;
+  box-shadow: none;
+  transform: none;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-center {
+  justify-content: center;
+  align-items: center;
+}
