--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,19 @@
 <h1>{{title}}</h1>
-<!-- 加载 presentation 模块 -->
-<!--<app-presentation></app-presentation>-->
-<!--<app-quiz></app-quiz>-->
-<!--<div class="container">-->
-<!--  <ul class="nav nav-tabs">-->
-<!--    <li class="nav-item">-->
-<!--      <a class="nav-link" routerLink="/presentation">Presentation</a>-->
-<!--    </li>-->
+<div class="container">
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/presentation">Presentation</a>
+    </li>
 <!--    <li class="nav-item">-->
 <!--      <a class="nav-link" routerLink="/quiz">quiz</a>-->
 <!--    </li>-->
-<!--    <li class="nav-item">-->
-<!--      <a class="nav-link" routerLink="/game">game</a>-->
-<!--    </li>-->
-<!--    <li class="nav-item">-->
-<!--      <a class="nav-link" routerLink="/end">end</a>-->
-<!--    </li>-->
-<!--  </ul>-->
-<!--  <div>-->
-<!--    Quiz-->
-<!--  </div>-->
-
-<!--  <div>-->
-<!--    <router-outlet></router-outlet>-->
-<!--  </div>-->
-<!--</div>-->
-<div class="container">
-  <div id="home" class="flex-center flex-column">
-    <a class="btn" (click)="redirectTo('/presentation')">Presentation</a>
-    <a class="btn" (click)="redirectTo('/game')">Quick Quiz</a>
-  </div>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/game">Game</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" (click)="bgm.play()">Music</a>
+    </li>
+  </ul>
 </div>
 <div>
   <router-outlet></router-outlet>
