add click button to show planet description function

--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -1,10 +1,15 @@
 <div id="tag" class="" style="width:640px;position:absolute;bottom:30px;background:rgba(250,0,0,0)">
   <div id="ui" style="display:inline-block;width:48px;height:48px;margin-left:20px;">
+
+<!--    // <img src="assets/tags/地球.png" alt="" style=" display:block; ">-->
+
     <div class="" style="position:relative;">
         <span id="cir" style="display:block;width:44px;height:44px;border-radius:22px;
             position:absolute;left:2px;top:2px;
-            visibility:hidden;"></span>
-      <img (click)="chosenPlanet='sun'" src="assets/buttons/太阳.png" alt="" style="display:block;width:48px;position:absolute;left:200px;top:25px;">
+            visibility:hidden;">
+
+        </span>
+      <img src="assets/buttons/太阳.png" alt="" style="display:block;width:48px;position:absolute;left:200px;top:25px;">
       <span style="display:block; position:absolute; top:75px; left:210px; color:white;">
         Sun
       </span>
