--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -10,40 +10,40 @@
 
         </span>
       <img src="assets/buttons/太阳.png" alt="" style="display:block;width:48px;position:absolute;left:300px;top:25px;">
-      <span style="display:block; position:absolute; top:75px; left:210px; color:white;">
+      <span style="display:block; position:absolute; top:75px; left:310px; color:white;">
         Sun
       </span>
       <img  src="assets/buttons/水星.png" alt="" style="display:block;width:48px;position:absolute;left:400px;top:25px;">
-      <span style="display:block; position:absolute; top:75px; left:295px; color:white;">
+      <span style="display:block; position:absolute; top:75px; left:400px; color:white;">
         Mercury
       </span>
       <img  src="assets/buttons/金星.png" alt="" style="display:block;width:48px;position:absolute;left:500px;top:25px;">
-      <span style="display:block; position:absolute; top:75px; left:400px; color:white;">
-        金星
+      <span style="display:block; position:absolute; top:75px; left:500px; color:white;">
+        Venus
       </span>
       <img  src="assets/buttons/地球.png" alt="" style="display:block;width:48px;position:absolute;left:600px;top:25px;">
-      <span style="display:block; position:absolute; top:75px; left:500px; color:white;">
-        earth
+      <span style="display:block; position:absolute; top:75px; left:600px; color:white;">
+        Earth
       </span>
       <img  src="assets/buttons/火星.png" alt="" style="display:block;width:48px;position:absolute;left:700px;top:25px;">
-      <span style="display:block; position:absolute; top:75px; left:610px; color:white;">
+      <span style="display:block; position:absolute; top:75px; left:700px; color:white;">
         Mars
       </span>
       <img  src="assets/buttons/木星.png" alt="" style="display:block;width:48px;position:absolute;left:800px;top:25px;">
-      <span style="display:block;position:absolute;left:710px;top:75px;color:white;">
-        木星
+      <span style="display:block;position:absolute;left:800px;top:75px;color:white;">
+        Jupiter
       </span>
       <img  src="assets/buttons/土星.png" alt="" style="display:block;width:48px;position:absolute;left:900px;top:25px;">
-      <span style="display:block; position:absolute; top:75px; left:810px; color:white;">
-        土星
+      <span style="display:block; position:absolute; top:75px; left:900px; color:white;">
+        Saturn
       </span>
       <img  src="assets/buttons/天王星.png" alt="" style="display:block;width:48px;position:absolute;left:1000px;top:25px;">
-      <span style="display:block; position:absolute; top:75px; left:910px; color:white;">
-        天王星
+      <span style="display:block; position:absolute; top:75px; left:1000px; color:white;">
+        Uranus
       </span>
       <img  src="assets/buttons/海王星.png" alt="" style="display:block;width:48px;position:absolute;left:1100px;top:25px;">
-      <span style="display:block; position:absolute; top:75px; left:1010px; color:white;">
-        海王星
+      <span style="display:block; position:absolute; top:75px; left:1100px; color:white;">
+        Neptune
       </span>
     </div>
   </div>
