--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,11 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/presentation">Presentation</a>
     </li>
-<!--    <li class="nav-item">-->
-<!--      <a class="nav-link" routerLink="/quiz">quiz</a>-->
-<!--    </li>-->
     <li class="nav-item">
       <a class="nav-link" routerLink="/game">Game</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" (click)="bgm.play()">Music</a>
+      <a class="nav-link" (click)="stopMusic()">Stop Music</a>
     </li>
   </ul>
 </div>
