fixed the question' idx wrong bug

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -7,7 +7,7 @@
         <div class="hud-prefix" class="question">
           Question
         </div>
-        <h2 class="score">{{questionIdx+1}} / 10</h2>
+        <h2 class="score">{{questionIdx}} / {{questionsNumber}}</h2>
       </div>
       <div >
         <h2 class="question">
