extend mute music function

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       <a class="nav-link" routerLink="/game">Game</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" (click)="stopMusic()">Stop Music</a>
+      <button class = "stop-button" (click)="stopMusic()">{{desc}}</button>
     </li>
   </ul>
 </div>
